# DEVENV

./: README.md  pyproject.toml  validate_cli.py
devenv/: __init__.py  __main__.py  cli.py  detector.py  dev_server.py  installer.py  project_summary.py  scanner.py  utils.py  version_parser.py
devenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
devenv/cli_utils/: __init__.py  cli_utils.py  docker_utils.py  os_utils.py  project_utils.py  runtime_utils.py  security.py
devenv/commands/: __init__.py  doctor.py  info.py  install.py  run.py  scan.py  setup.py  summary.py
scripts/: install_deps.py  setup-devenv.sh  setup_devenv.py  test_devenv.py
smart_devenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
